# database_plugin_template

./: CMakeLists.txt  Makefile  cmake_install.cmake
src/: db_plugin.cpp
